# photonics_helper

./: .gitignore  README.md  helper.py  helper.pyi  pyproject.toml  setup.py  test.py
photonics_helper/: __init__.py  base.py  base.pyi  fiber.py  fiber.pyi  helper.py  helper.pyi  looks.py  materials.py  materials.pyi  pulse.py  utils.py  utils.pyi
src/: helper.py
tests/: test_helper.py  test_materials.py
