[project]
name = "photonics-helper"
version = "0.1.0"
description = "A comprehensive helper library for photonics and optics calculations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Hitaishi V", email = "hitaishi2222@gmail.com"}
]
keywords = ["photonics", "optics", "wavelength", "frequency", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/hitaishi2222/photonics-helper"
Documentation = "https://github.com/hitaishi2222/photonics-helper#readme"

[tool.setuptools.package-data]
photonics_helper = ["*.pyi"]
